--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -13,7 +13,7 @@
 email: tahereh.zarratehsan@radboudumc.nl # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
-# github_username: # your GitHub user name
+github_username: TaherehZarratEhsan
 # gitlab_username: # your GitLab user name
 # hal_id: # your HAL id (https://hal.science/)
 # ieee_id: # your ieeexplore.ieee.org/author/id
