--- a/_config.yml
+++ b/_config.yml
@@ -193,6 +193,7 @@ exclude:
   - _pages/news.md
   - _pages/projects.md
   - _pages/repositories.md
+  - _pages/people.md
   - purgecss.config.js
   - README.md
   - readme_preview/
