--- a/_config.yml
+++ b/_config.yml
@@ -194,6 +194,7 @@ exclude:
   - _pages/projects.md
   - _pages/repositories.md
   - _pages/profiles.md
+  - _pages/dropdown.md
   - purgecss.config.js
   - README.md
   - readme_preview/
