--- a/_config.yml
+++ b/_config.yml
@@ -195,6 +195,7 @@ exclude:
   - _pages/repositories.md
   - _pages/profiles.md
   - _pages/dropdown.md
+  - _pages/blog.md
   - purgecss.config.js
   - README.md
   - readme_preview/
